# PhaseOscilatorExperiment

./: .gitignore  Makefile  README.md  cauchy_p.py  const_entoropy.py  hmc.cpp  mixture.cpp  mixture.py  notify.py  parallel.cpp  phase.cpp  phase.hpp  phase.py  phase.sh  phase_K.py  phase_make_beta.py  requirements.txt  utils.hpp  utils.py
phase/: CMakeLists.txt  phase.cpp  phase_asym.cpp  run.sh  run_asym.sh
phase/include/: debug_math.hpp  math.hpp  mcmc.hpp  phase.hpp  utils.hpp
phase/scripts/: 2body_simulation.ipynb  convergence.py  default_analysis.py  draw_graph.py  make_param.py  simulate.py  state_animation.py
phase/tests/: test_math.cpp
phase_v2/: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.sh
phase_v2/include/: _assert.hpp  _common.hpp  _concurrent.hpp  _define.hpp  _math.hpp  collection.hpp  mcmc.hpp  new_collection.hpp  new_concurrent.hpp  new_lib.hpp  new_mcmc.hpp  new_order.hpp  new_param.hpp  new_system.hpp  opy.hpp  order.hpp  sim.hpp  tool.hpp
phase_v2/py/: N=2_heatmap.py  N=2_param.py  N=2_window_rate.py  N=3_heatmap.py  N=3_isoenergetic.py  common.py  correlation_time_mcmc.py  eval_sample.py  figure.py  newopy.py  opypy.py  reprica_exchange_param.py  rk4_rk45_time.py
phase_v2/src/: newopy_impl.cpp  opy.cpp  sample_mcmc.cpp  window_rate.cpp
phase_v2/test/: perf_eval.cpp  test_collection.cpp  test_mcmc.cpp  test_order.cpp  test_sim.cpp
phase_v2/topics/: CMakeLists.txt
practice/: Makefile  const.cpp  const.py  parallel.cpp  parallel.py
